Add toggle silde effect on shop page
shop page add js to toggle section open and close

--- a/dev/shop/all.styl
+++ b/dev/shop/all.styl
@@ -39,14 +39,22 @@
     &>li
         color: #D8D8D8
         margin-bottom: 7px
-        a
+        span
             color: #4A4A4A
             font-size: 15px
+    
+    .category_child
+        display: none;
+        color: #4A4A4A
 
+        div
+            font-size: 13px;
+            margin-top: 5px
+            
     .category_list_active
         color: #D5948E
 
-        a
+        span
             color: #D6645F
 
 +media-query( only screen ,max-width ($banner_max_width) )
