Fix shop page problem
Update product module
And fix shop page curser problem

--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -114,13 +114,13 @@ $product_name_lineHeight = 18px
 
         .tag
             size: 34px
-
+            font-size: 12px
     .product_img_wrapper
         size: 172px 180px
         size: 168px 177px;
         position: relative;
 
-    .product_info,.tag
+    .product_info
         font-size: 12px
     
     .icon_btn
