--- a/dev/shop/all.styl
+++ b/dev/shop/all.styl
@@ -42,6 +42,7 @@
         span
             color: #4A4A4A
             font-size: 15px
+            cursor: pointer
     
     .category_child
         display: none;
