--- a/dev/_general/banner_section/banner_section.jade
+++ b/dev/_general/banner_section/banner_section.jade
@@ -1,6 +1,6 @@
 include ../filter/filter.jade
 
-mixin banner_section(linkUrl,bannerUrl,navArray,isFilter)
+mixin banner_section(linkUrl,bannerUrl,navArray,isFilter,isSearchBar)
     section#main_section
         a(href=linkUrl)#main_banner.page_link
             img(src=bannerUrl)
