--- a/dev/_general/login/login.styl
+++ b/dev/_general/login/login.styl
@@ -78,6 +78,7 @@
     color: #950012
     font-size: 12px
     text-align: center
+    height: 14px;
 .forget_password
     margin-top: 15px
     color: $pink_medium
