--- a/dev/order_detail/all.styl
+++ b/dev/order_detail/all.styl
@@ -93,6 +93,9 @@
             text-align: left;
             margin-left: 20px;
 
+        img
+            height: 150px
+
     td[data-th='單價']
             position: relative;
 
