--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -121,9 +121,9 @@ header#header.isRWD
                     #shopping_cart.dropdown_block
                         .shopping_cart_product                            
                             img(src="../general/img/shopping_cart_delete.png").remove_product
-                            .product_info_wrapper
+                            .shopping_cart_product_info_wrapper
                                 .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
-                                .product_info
+                                .shopping_cart_product_info
                                     .color 顏色：紅色
                                     .number 數量： 1
                                 .product_price $ 580
@@ -131,9 +131,9 @@ header#header.isRWD
                         
                         .shopping_cart_product                            
                             img(src="../general/img/shopping_cart_delete.png").remove_product
-                            .product_info_wrapper
+                            .shopping_cart_product_info_wrapper
                                 .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
-                                .product_info
+                                .shopping_cart_product_info
                                     .color 顏色：紅色
                                     .number 數量： 1
                                 .product_price $ 580
