--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -179,7 +179,7 @@ form.dropdown_block:after
             margin-right: 30px;
             cursor: pointer
 
-    .product_info_wrapper
+    .shopping_cart_product_info_wrapper
         flex: 1
         display: flex
         flex-direction: column
@@ -190,10 +190,12 @@ form.dropdown_block:after
             
         .number
             margin-left: 25px
-
-        .product_info
+        
+        .shopping_cart_product_info
             display: flex
             margin: 10px 0;
+            color: #8e5651;
+            font-size: 12px;
 
     .product_img
         height:82px
