Modify refund page dialog
Modify refund page dialog width / section title margin with rwd

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -119,24 +119,26 @@ header#header.isRWD
                 span.dropdown_block_wrapper
                     i.fa.fa-shopping-cart(aria-hidden='true')
                     #shopping_cart.dropdown_block
-                        .shopping_cart_product                            
-                            img(src="../general/img/shopping_cart_delete.png").remove_product
+                        .shopping_cart_product      
+                            a                      
+                                img(src="../general/img/shopping_cart_delete.png").remove_product
                             .shopping_cart_product_info_wrapper
-                                .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
+                                .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                 .shopping_cart_product_info
                                     .color 顏色：紅色
                                     .number 數量： 1
-                                .product_price $ 580
+                                .shopping_cart_product_price $ 580
                             img(src="../general/img/商品圖_cart.png").product_img
                         
                         .shopping_cart_product                            
-                            img(src="../general/img/shopping_cart_delete.png").remove_product
+                            a
+                                img(src="../general/img/shopping_cart_delete.png").remove_product
                             .shopping_cart_product_info_wrapper
-                                .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
+                                .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                 .shopping_cart_product_info
                                     .color 顏色：紅色
                                     .number 數量： 1
-                                .product_price $ 580
+                                .shopping_cart_product_price $ 580
                             img(src="../general/img/商品圖_cart.png").product_img
                         
                         .shopping_cart_calc
