--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -184,7 +184,7 @@ form.dropdown_block:after
         display: flex
         flex-direction: column
 
-        .product_name
+        .shopping_cart_product_name
             white-space: normal
             letter-spacing: 0.31px;
             
@@ -199,6 +199,7 @@ form.dropdown_block:after
 
     .product_img
         height:82px
+        width: 71px;
         margin-left: 39px
     
     
