--- a/dev/choice_return_product/all.styl
+++ b/dev/choice_return_product/all.styl
@@ -27,6 +27,7 @@
 
 
 .section_title
+    margin-top: 12px;
     .split
         margin: 16px 0
 
@@ -150,8 +151,10 @@ tr.have_comment
         &:before
             margin-bottom: 13px;
             width: 100%
-    .section_title>.checkbox_wrapper
-        margin-left: 10px
+    .section_title
+        margin-top: 0;
+        &>.checkbox_wrapper
+            margin-left: 10px
     .rwd-table tbody tr
         margin-bottom: 30px
     .return_product_table
