--- a/dev/refund_account/all.styl
+++ b/dev/refund_account/all.styl
@@ -2,6 +2,8 @@
 @import "../_general/dialog/dialog"
 
 .section_title
+    margin-top: 12px;
+
     .split
         margin: 16px 0
 
@@ -44,18 +46,18 @@ input[type = text]
     margin: 0 20px
 
 #dialog
-    padding: 45px 227px 94px
+    padding: 45px 0 94px;
+    width: 985px;
     display: none
     p
-        min-width: 530px;
         font-weight: 100
     
-        &:nth-of-type(3)
+        &:nth-of-type(2)
             margin: 20px 0 50px;
 
 +media-query( all, max-width $phone_rwd_width )
+    .section_title
+        margin-top: 0;
     #dialog
         padding: 50px 36px
-
-        p
-            min-width: initial;
+        width: initial;
