--- a/dev/refund_credit_card/index.jade
+++ b/dev/refund_credit_card/index.jade
@@ -30,7 +30,8 @@ block member_section
     div#dialog.do_button_dialog
         h1 退貨申請已送出
         p 退貨申請已成功送出，請將退貨商品寄回以下地址：
-        p 106台北市大安區泰順街44巷25號1F
-        p 我們將於收到您的退貨商品並審核符合退貨條件後，進行退款程序，退款的作業時間為收到退貨商品後的5個工作天，謝謝！
+            | <br/> 106台北市大安區泰順街44巷25號1F
+        p 我們將於收到您的退貨商品並審核符合退貨條件後，進行退款程
+            | <br/> 序，退款的作業時間為收到退貨商品後的5個工作天，謝謝！
         button.dialog_button#check_receive 確定
                     
