--- a/dev/order_query/index.jade
+++ b/dev/order_query/index.jade
@@ -108,7 +108,7 @@ block member_section
                 input(type="radio" name="cancel_type" id="other")
                 label(for="other") 其他
 
-        textarea(rows="4" cols="50").cancel_reason
+        textarea(rows="4" cols="50" disabled="disabled").cancel_reason
         div.alter_msg 請選擇或填寫取消訂單原因
         span.dialog_button_wrapper
             button.dialog_button.dialog_cancel 取消
