--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -6,6 +6,7 @@
 .error_message
     text-align: initial;
     padding-left: 25px;
+    display: none
 /*overrid login.styl*/
 #main
     display: flex
