Fix bug and modify to test and compat some feature
Modify Header jade / css to test and compat(相容) <a> in nav_btns class
 Fix shop page problem ( if only one page , product will be center)

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -8,7 +8,8 @@ header#header.isRWD
             img(alt="Embedded Image" src=logoImgBase64)#logo_img
         
         ul.parent_category_list.rwd_disapper
-            li 限時優惠
+            li 
+                a(href="#").parent_category 限時優惠
                 div.child_category_wrapper
                     ul.child_category_list
                         li 
@@ -19,7 +20,8 @@ header#header.isRWD
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
                     img(src="../general/img/pic1.png")
                     
-            li 最新商品
+            li 
+                a(href="#").parent_category 最新商品
                 div.child_category_wrapper
                     ul.child_category_list
                         li 
@@ -29,20 +31,27 @@ header#header.isRWD
                         li 
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
                     img(src="../general/img/pic1.png")
-            li 熱門商品
-            li 美甲彩繪
+            li 
+                a(href="#").parent_category 熱門商品
+            li 
+                a(href="#").parent_category 美甲彩繪
                 
-            li 時尚彩妝
-            li 美體保養
+            li 
+                a(href="#").parent_category 時尚彩妝
+            li 
+                a(href="#").parent_category 美體保養
                 
-            li 香氛香氣
+            li 
+                a(href="#").parent_category 香氛香氣
                 
-            li.more_option_wrapper 更多品項
+            li.more_option_wrapper 
+                a(href="#").parent_category 更多品項
                 div.child_category_wrapper.more_option
                     
                     ul.child_category_list
                         span.first_layer_triangle
-                        li.rwd950 香氛香氣
+                        li.rwd950 
+                            a(href="#") 香氛香氣
                             ol.more_option_child_wrapper
                                 li 
                                     a(href="") 既然那是隻能下蛋的雞，為何幻化成人之後卻是個男人
@@ -50,7 +59,8 @@ header#header.isRWD
                                     a(href="") 這首真是好聽的莫名奇妙XD
                                 li 
                                     a(href="") 聽到我雞雞皮疙瘩都起來了﻿
-                        li 護膚保養
+                        li 
+                            a(href="#") 護膚保養
                             ol.more_option_child_wrapper
                                 li 
                                     a(href="") C&CHAT 幻彩系指油貼任選兩件500元
@@ -58,7 +68,8 @@ header#header.isRWD
                                     a(href="") Dear Mia系列產品消費滿2,000元現折200元
                                 li 
                                     a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
-                        li 酷炫指甲
+                        li 
+                            a(href="#") 酷炫指甲
                             ol.more_option_child_wrapper
                                 li 
                                     a(href="") C&CHAT 幻彩系指油貼任選兩件500元
@@ -66,11 +77,16 @@ header#header.isRWD
                                     a(href="") Dear Mia系列產品消費滿2,000元現折200元
                                 li 
                                     a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
-                        li 光凝膠
-                        li 指甲貼片
-                        li 指甲保養
-                        li 卸甲商品
-                        li 天下無敵
+                        li 
+                            a(href="#") 光凝膠
+                        li 
+                            a(href="#") 指甲貼片
+                        li 
+                            a(href="#") 指甲保養
+                        li 
+                            a(href="#") 卸甲商品
+                        li 
+                            a(href="#") 天下無敵
                             ol.more_option_child_wrapper
                                 li 
                                     a(href="") XXXXXXX
@@ -90,7 +106,7 @@ header#header.isRWD
                 | <i class="scroll_disappear">|</i>
                 
                 span.dropdown_block_wrapper
-                    i.fa.fa-user-circle-o.small_icon(aria-hidden='true')
+                    a.fa.fa-user-circle-o.small_icon(aria-hidden='true')
 
                     ul.dropdown_block
                         li 
