--- a/dev/shop/all.styl
+++ b/dev/shop/all.styl
@@ -16,7 +16,8 @@
 .two_col
     display: flex
     max-width: $banner_max_width
-
+    width: 100%;
+    
 #category
     width: 300px
     min-width: 300px;
@@ -59,6 +60,7 @@
             color: #D6645F
 #main
         padding: 0
+    
 +media-query( only screen ,max-width ($banner_max_width) )
     #main
         padding: 0 10px
