New privacy_policy page , little change product template
Change product div to a , beacuse it can be click to single-product page
New privacy_policy page , but without rwd (desginer haven’t give sketch
file)

--- a/dev/_general/product/product.jade
+++ b/dev/_general/product/product.jade
@@ -9,7 +9,7 @@ mixin product(imgPath,isNeedCartButton,tag)
         else if tag == "sale"
             .tag.sale Sale
 
-        .product_img_wrapper
+        a(href="#").product_img_wrapper
             div.icon_wrapper
                 .icon_btn.fa.fa-heart
                 .icon_btn.fa.fa-shopping-cart
