--- a/dev/account_setting/all.styl
+++ b/dev/account_setting/all.styl
@@ -77,12 +77,23 @@
     margin-bottom: 10px;
     display: none
 
+.error_msg
+    text-align: left;
+    font-weight: 100;
+    margin-top: 5px;
+    color: #950012
+    font-size: 12px
+    display: none;
+
 #reset_password_dialog
     display: none
     padding: 55px 200px 60px
     h1
         margin-bottom: 60px
     
+    ul>li
+        margin-bottom: 20px
+
     .dialog_alter_msg,.error_msg
         text-align: left;
         margin-left: 20px;
@@ -91,10 +102,6 @@
     .dialog_alter_msg
         color: #D6645F
         font-size: 12px
-
-    .error_msg
-        margin-bottom: 20px
-        color: #950012
 
     input[type="password"]
         background: #FFFFFF;
@@ -108,6 +115,9 @@
             color: #C3C2C3
             font-weight: 100
             font-size: 14px
+
+    .dialog_button_wrapper
+        margin-top: 40px;
 
 #reset_password_success_dialog
     padding: 55px 165px 67px
