--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -56,12 +56,13 @@
     &>p
         font-size: 18px
         margin: 20px 0 45px
-    button
+    button,a
         display: flex
         padding: 7px 32px
         background: #D5948E;
         border-radius: 6px;
         color: white
+        cursor: pointer
 
 +media-query( all, max-width $phone_rwd_width )
     #dialog
