--- a/dev/member_register/index.jade
+++ b/dev/member_register/index.jade
@@ -29,4 +29,4 @@ block content
     div#dialog
         h1 恭喜您已完成註冊
         p 請至信箱收取認證信完成註冊程序，謝謝！
-        button#check_receive 確定
+        a(href="#")#check_receive 確定
