Add new feature and change ajax json format
1.Update privacy_policy page with rwd
2.home page subscribe is finsih concat using ajax
3.home page banner slide is autoplay
4.orders page and account_setting page update the format of json and
judge return data

--- a/dev/home/index.jade
+++ b/dev/home/index.jade
@@ -91,9 +91,9 @@ block content
     section#subscribe_newsletters
         h1 訂閱電子報取得第一手優惠資訊！
         h2 SIGN UP TO OUR WEEKLY NEWSLETTER
-        form
-            input(type='eamil' placeholder='Your email address')
-            input(type='submit' value='SUBSCRIBE')#subscribe_btn
+        .form
+            input(type='eamil' placeholder='Your email address' maxlength='30')#useremail
+            input(type='submit' name='add-user' value='SUBSCRIBE')#subscribe_btn
         div
             a(href="#")
                 i.fa.fa-instagram(aria-hidden='true')
