--- a/dev/privacy_policy/all.styl
+++ b/dev/privacy_policy/all.styl
@@ -30,5 +30,15 @@
         font-weight: normal;
         line-height: 25px;
         
-
++media-query( all, max-width $phone_rwd_width )
+    #main
+        padding: 0 10px;
     
+    #sub_section
+        display: none;
+    .split
+        margin: 0
+    .content
+        font-size: 15px
+        margin-top: 20px
+        margin-bottom: 40px
