--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -153,7 +153,7 @@ $slide_arrow_side_distance = 25px
         font-size: $font15
         margin-left: -7px
 
-    &>form
+    &>form,.form
         height: 40px
         max-width: 370px
         width: 100%
