Adjust some page css
on shop page , the product img adjust to 高填滿然後圖片置中
Filter change a little style
Remove shopping-cart icon

--- a/dev/_general/product/product.jade
+++ b/dev/_general/product/product.jade
@@ -12,7 +12,7 @@ mixin product(imgPath,isNeedCartButton,tag)
         a(href="#").product_img_wrapper
             div.icon_wrapper
                 .icon_btn.fa.fa-heart
-                .icon_btn.fa.fa-shopping-cart
+                //- .icon_btn.fa.fa-shopping-cart
             //a(href="")
             img(src=imgPath)
         .product_info
