--- a/dev/_general/filter/filter.styl
+++ b/dev/_general/filter/filter.styl
@@ -53,4 +53,6 @@
 
             &:hover
                 color: black
-
+            
+            &:last-child
+                border-bottom: none;
