--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -44,6 +44,8 @@ $product_name_lineHeight = 18px
 
 .product_img_wrapper
     size 285px 300px
+    overflow: hidden;
+    position: relative;
 
     &:hover
         background: rgba(214,100,95,0.33);
@@ -52,10 +54,17 @@ $product_name_lineHeight = 18px
         opacity: 1
     img
         //absolute: 0
-        position: absolute
-        top: 0
-        z-index: -1
-        width: 100%;
+        //position: absolute
+        //top: 0
+        //z-index: -1
+        //width: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        z-index: -1;
+        height: 100%;
+        
 
 .icon_wrapper
     size 100%
