inintial forget-password page show
Modify page : forget-password to inintial page show

--- a/dev/forget_password/all.styl
+++ b/dev/forget_password/all.styl
@@ -54,7 +54,8 @@
         background: #D5948E;
         border-radius: 6px;
         color: white
-
+.error_message
+    visibility: hidden
 +media-query( all, max-width $phone_rwd_width )
     #dialog
         //margin: 0 10px
