--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -21,6 +21,7 @@ $product_name_lineHeight = 18px
         font-size: 16px
         display: flex
         flex-axis: center
+        z-index: 2; 
 
     // &:nth-child(4n)
     //     margin-right: 0;
@@ -124,6 +125,7 @@ $product_name_lineHeight = 18px
         .tag
             size: 34px
             font-size: 12px
+            
     .product_img_wrapper
         size: 172px 180px
         size: 168px 177px;
