--- a/dev/shop/all.styl
+++ b/dev/shop/all.styl
@@ -40,7 +40,7 @@
     &>li
         color: #D8D8D8
         margin-bottom: 7px
-        span
+        span,a
             color: #4A4A4A
             font-size: 15px
             cursor: default
