修正跟新增功能
Search 取消autocomplete
header 搜尋/漢堡 點背景會收起來
shop 商品分類 hover要出現大拇指
修正register/forget_password page Js error
Change subscribe ajax code

--- a/dev/account_setting/all.styl
+++ b/dev/account_setting/all.styl
@@ -84,7 +84,10 @@
     color: #950012
     font-size: 12px
     display: none;
-
+    
+.dialog_button_wrapper
+    a.dialog_button
+        line-height: 30px
 #reset_password_dialog
     display: none
     padding: 55px 200px 60px
