--- a/dev/account_setting/index.jade
+++ b/dev/account_setting/index.jade
@@ -105,7 +105,7 @@ block member_section
             p 密碼重設成功，請用新密碼登入帳戶，謝謝。
 
             span.dialog_button_wrapper
-                button.dialog_button.dialog_check 確定
+                a.dialog_button.dialog_check 確定
         
         div.do_button_dialog#modify_success_dialog
             h1 個人資料成功修改
