--- a/dev/shop/all.styl
+++ b/dev/shop/all.styl
@@ -40,10 +40,11 @@
     &>li
         color: #D8D8D8
         margin-bottom: 7px
+        cursor: pointer
         span,a
             color: #4A4A4A
             font-size: 15px
-            cursor: default
+            
     
     .category_child
         display: none;
