重設密碼 忘記密碼 註冊頁面修改，新增cart頁面
1.重設密碼 忘記密碼 jade /  js 更改完成
2.新增cart page
3.註冊頁面加上FB註冊，jade / js更改

--- a/dev/_general/login/login.jade
+++ b/dev/_general/login/login.jade
@@ -13,7 +13,7 @@ mixin login()
 mixin register()
     section.login_section.form_section
         h1 會員註冊
-        a(hrfe="").input_button.fb_login.section_box facebook註冊
+        div#fb_register.input_button.fb_login.section_box facebook註冊
         hr
         .form
             input(type="eamil" placeholder="請輸入Email" require).input_box.section_box#register_mail
