--- a/dev/member_register/index.jade
+++ b/dev/member_register/index.jade
@@ -7,7 +7,7 @@ block content
     section.register_data_section.form_section
         h1.marB32 請填寫/核對會員資料就可完成註冊
         div.form
-            input(type="email" placeholder="Eamil" require).input_box.section_box
+            input(type="email" placeholder="Eamil" require).input_box.section_box#register_fb_email
             .error_message 請輸入email
             input(type="text" placeholder="姓名" require).input_box.section_box#register_name
             .error_message 請輸入姓名
