新增小功能
訂閱功能新增dialog
訂閱功能的dialog 依照server給的資料 給不同的結果訊息
order_query page 加入信用卡取消訂單流程
新增cart頁面

--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -1,5 +1,5 @@
 @import "../_general/general"
-
+@import "../_general/dialog/dialog"
 //@import "../_general/third_part/slick-1.6.0/slick/slick-theme.css"
 
 $row_border_line_padding = 20px
@@ -194,7 +194,12 @@ $slide_arrow_side_distance = 25px
         background: white
         color: $pink_medium
 
+#subscribe_success
+    display: none
+    padding: 90px 126px
 
+    &>h1
+        margin: 0
 /*add for third part lib slick http://kenwheeler.github.io/slick/ */
 .slick_slide
     position: relative;
