--- a/dev/home/index.jade
+++ b/dev/home/index.jade
@@ -99,3 +99,6 @@ block content
                 i.fa.fa-instagram(aria-hidden='true')
             a(href="#")
                 i.fa.fa-facebook-official(aria-hidden='true')
+    
+    div.do_button_dialog#subscribe_success
+            h1 訂閱成功
