--- a/dev/order_query/index.jade
+++ b/dev/order_query/index.jade
@@ -124,7 +124,7 @@ block member_section
                 td  信用卡刷退
             tr
                 td  退款金額：
-                td  $1,200
+                td#refund_money  $1,200
 
         span.dialog_button_wrapper
             button.dialog_button.dialog_check 確定
