--- a/dev/cart/all.styl
+++ b/dev/cart/all.styl
@@ -198,6 +198,53 @@
         margin-top: 0;
 
 /*以上直接reference到order_detial page all.styl (copy and paste)*/
+.order_product_table
+    margin-bottom: 0
+
+td[data-th='商品']
+    img
+        width: 150px
++media-query( all, max-width $phone_rwd_width )
+    .order_product_table
+        td
+            width: 20%;
+            
+    td[data-th='商品']
+        img
+            width: 107px
+    
+.statistics_table
+    width: 400px
+
+    &>span
+        margin-right: 135px
+
+    .button_wrapper
+        display: flex
+        justify-content: center;
+        margin: 45px 0 130px
+        &>button,a
+            width: 96px;
+            height: 36px;
+            border-radius: 6px;
+            font-size: 15px;
+            font-weight: 300;
+            letter-spacing: 0.4px;
+            margin: 0 20px;
+            cursor: pointer
+
+        .keep_buy
+            background: white;
+            border: solid 1.2px #d5948e;
+            color: #d5948e;
+
+        .next_step
+            background-color: #d5948e;
+            color: white;
+
+
+.delete_img
+    size: 20px 24px
 
 #main
     width: 100%;
@@ -209,6 +256,7 @@
     display: flex
     flex-direction: column
     align-items: center
+    margin-bottom: 44px
     
     h1
         /* 結帳: */
