--- a/dev/cart/index.jade
+++ b/dev/cart/index.jade
@@ -31,18 +31,17 @@ block content
                     thead
                         tr
                             th 商品
-                            th 商品編號
                             th 顏色
                             th 單價
                             th 數量
                             th 小計
+                            th 刪除
                     tbody
                         tr
                         tr
                             td(data-th='商品') 
                                 img(src="./img/商品一.png")
                                 a(href="#") 如膠似漆2.0系列-We The Female 凱莉的最愛 ISLW64
-                            td(data-th='商品編號') NP00123456
                             td(data-th='顏色') 
                                 img(src="./img/color-3.png")
                             td(data-th='單價') 
@@ -50,12 +49,14 @@ block content
                                 .normal_price $ 490
                             td(data-th='數量') 1
                             td(data-th='小計') $ 390
+                            td(data-th='刪除') 
+                                a
+                                    img(src="./img/delete.png").delete_img
                         tr
                         tr
                             td(data-th='商品') 
                                 img(src="./img/商品一.png")
                                 a(href="#") 如膠似漆2.0系列-We The Female 凱莉的最愛 ISLW64
-                            td(data-th='商品編號') NP00123456
                             td(data-th='顏色') 
                                 img(src="./img/color-3.png")
                             td(data-th='單價') 
@@ -63,8 +64,11 @@ block content
                                 .normal_price $ 490
                             td(data-th='數量') 1
                             td(data-th='小計') $ 390
-                
-                .statistics_table
+                            td(data-th='刪除') 
+                                a
+                                    img(src="./img/delete.png").delete_img
+    section.statistics_table            
+                        //.statistics_table
                         span
                             .count_name 總計金額
                                 .count_note (不含滿額或滿量現折金額)
@@ -91,3 +95,7 @@ block content
                         span.sum_result
                             .count_name 合計
                             .count_price $ 2870
+                        
+                        div.button_wrapper
+                            button.keep_buy 繼續購物
+                            button.next_step 確定
