--- a/dev/cart/index.jade
+++ b/dev/cart/index.jade
@@ -86,10 +86,6 @@ block content
                             .count_name 購物金折抵
                             .count_price
                         
-                        span
-                            .count_name 運費
-                            .count_price $ 10
-                        
                         hr
                         
                         span.sum_result
@@ -97,5 +93,5 @@ block content
                             .count_price $ 2870
                         
                         div.button_wrapper
-                            button.keep_buy 繼續購物
-                            button.next_step 確定
+                            a.keep_buy 繼續購物
+                            a.next_step 確定
