--- a/dev/forget_password/index.jade
+++ b/dev/forget_password/index.jade
@@ -5,7 +5,7 @@ block content
         h1 忘記密碼
         p 請輸入當初註冊的email與生日，系統將會寄送重設密碼通知信至此信箱，謝謝。
         div.form
-            input(type="text" placeholder="請輸入已經註冊Email" require).input_box.section_boxid#forget_mail
+            input(type="text" placeholder="請輸入已經註冊Email" require).input_box.section_box#forget_mail
             span.input_date_wrapper
                 input(type="text" placeholder="YYYY" require).input_box.input_year#forget_date_year
                 input(type="text" placeholder="MM" require).input_box.input_month#forget_date_month
