--- a/dev/_general/login/login.jade
+++ b/dev/_general/login/login.jade
@@ -1,7 +1,7 @@
 mixin login()
     section.login_section.form_section
         h1 會員登入
-        a(hrfe="").input_button.fb_login.section_box facebook登入
+        div#fb_login_button.input_button.fb_login.section_box facebook登入
         hr
         form
             input(type="eamil" placeholder="請輸入Email" require).input_box.section_box
