--- a/dev/product_intro/index.jade
+++ b/dev/product_intro/index.jade
@@ -15,8 +15,8 @@ block content
     div.product_intro_wrapper
         section
             div#product_photo_list
-                img(src="./asset/商品係圖-1.png")
-                img(src="./asset/商品係圖-2.png")
+                img(src="./asset/商品係圖-1.png" data-url="./asset/商品係圖-1.png")
+                img(src="./asset/商品係圖-2.png" data-url="./asset/商品係圖-2.png")
                 img(src="./asset/商品係圖-3.png")
                 img(src="./asset/商品係圖-4.png")
                 img(src="./asset/商品係圖-5.png")
@@ -39,6 +39,47 @@ block content
                     img(src="./asset/color-1.png")
                     img(src="./asset/color-2.png")
                     img(src="./asset/color-3.png")
+                div.two_selects
+                    div.select_wrapper
+                        div size ：
+                        div.commodity_filter 
+                            span 價格低到高
+                            div.options
+                                span(value='價格低到高') 價格低到高
+                                span(value='價格高到低') 價格高到低
+                                span(value='價格不要出現') 價格不要出現
+                                span(value='我是土豪') 我是土豪
+                    
+                    div.select_wrapper
+                        div size ：
+                        div.commodity_filter 
+                            span 價格低到高
+                            div.options
+                                span(value='價格低到高') 價格低到高
+                                span(value='價格高到低') 價格高到低
+                                span(value='價格不要出現') 價格不要出現
+                                span(value='我是土豪') 我是土豪
+                div.two_selects
+                    div.select_wrapper
+                        div size ：
+                        div.commodity_filter 
+                            span 價格低到高
+                            div.options
+                                span(value='價格低到高') 價格低到高
+                                span(value='價格高到低') 價格高到低
+                                span(value='價格不要出現') 價格不要出現
+                                span(value='我是土豪') 我是土豪
+                    
+                    div.select_wrapper
+                        div size ：
+                        div.commodity_filter 
+                            span 價格低到高
+                            div.options
+                                span(value='價格低到高') 價格低到高
+                                span(value='價格高到低') 價格高到低
+                                span(value='價格不要出現') 價格不要出現
+                                span(value='我是土豪') 我是土豪
+                                
                 div.price
                     span.fake_price_strikethrough
                         span.fake_price $ 250
@@ -65,11 +106,12 @@ block content
         div.specification
             span.key 商品規格 |&nbsp;
             span.value
-                span 品牌名稱：Dear Mia
-                span 容量：15 ml
-                span 保存期限：三年      
-                span 產地：台灣
-                span 認證：北市衛妝廣字第1234574534號
+                span descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
+                //- span 品牌名稱：Dear Mia
+                //- span 容量：15 ml
+                //- span 保存期限：三年      
+                //- span 產地：台灣
+                //- span 認證：北市衛妝廣字第1234574534號
     
     section.product_histroy
         h2 最近瀏覽過的商品
