Test account setting - build 8
Test account setting - build 8

--- a/dev/account_setting/index.jade
+++ b/dev/account_setting/index.jade
@@ -41,7 +41,7 @@ block member_section
                             span#region_name.edit_disappear 大安區
                             div.select_wrapper
                                 select#receive_city_id.city(name='receive_city')
-                                    option(value='') 請選擇縣市
+                                    option(value='' hidden='') 請選擇縣市
                                     option(value='台北市') 台北市
                                     option(value='基隆市') 基隆市
                                     option(value='宜蘭縣') 宜蘭縣
