--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -23,6 +23,7 @@ $slide_arrow_side_distance = 25px
 #main
     display: flex
     flex-direction: column
+    flex:0 0 auto //for IE11
 
 #top_banner
     width:100%
@@ -225,6 +226,7 @@ $slide_arrow_side_distance = 25px
 
 .slick-track
     display: flex;
+    flex:0 0 auto //for IE11
 
 .slick-dotted.slick-slider
     margin: 0
