--- a/dev/member_login/all.styl
+++ b/dev/member_login/all.styl
@@ -7,7 +7,7 @@
     flex-direction: column
 
 .section_wrapper
-    margin-top: -5%
+    //margin-top: -5%
     &>p
         margin-top: 29px
 //login.styl
