--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -42,6 +42,13 @@ $product_name_lineHeight = 18px
     border-left:none
     border-right:none
     padding: 10px 0
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .fake_price
+        margin-right: 50px;
+        text-decoration: line-through;
 
 .product_img_wrapper
     size 285px 300px
