更新#member_panel scroll header置右
更新#member_panel scroll header置右

--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -235,6 +235,11 @@ form.dropdown_block:after
         position: fixed;
         right: 0;
         top: 9px;
+    
+    #member_panel
+        position: fixed;
+        right: 0;
+        top: 43px;
 
 #bars
     width: 18px;
