--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -108,7 +108,7 @@ header#header.isRWD
                 span.dropdown_block_wrapper
                     a.fa.fa-user-circle-o.small_icon(aria-hidden='true')
 
-                    ul.dropdown_block
+                    ul.dropdown_block#member_panel
                         li 
                             a(href="#") 訂單查詢
                         li
